# python-define

./: .gitignore  BUILD.md  README.md  define.py  pyproject.toml  setup.py
define.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
