[project]
name = "python-define"
version = "1.2.3"
description = "An OpenAI powered command-line linguistics assistant"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Grant Carthew", email = "grant@carthew.net"},
]
maintainers = [
  {name = "Grant Carthew", email = "grant@carthew.net"},
]
keywords = ["define", "openai", "llm", "english", "linguistics", "cli"]
dependencies = [
  "Click",
  "openai",
]

[project.urls]
Homepage = "https://github.com/grantcarthew/python-define"
Documentation = "https://github.com/grantcarthew/python-define"
Repository = "https://github.com/grantcarthew/python-define.git"
Changelog = "https://github.com/grantcarthew/python-define/commits/main"

[project.scripts]
define = "define:cli"

